[FIX] Fix overflow issues with hero image on square aspect ratios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,19 @@
 }
 
 body {
+    display: flex;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
     font-family: 'Courgette', sans-serif;
     color: whitesmoke;
     background-color: rgb(114, 114, 114);
     margin: 0;
     padding: 0;
+}
+
+body>div {
+    flex-grow: 1;
 }
 
 /* Header and Footer */
@@ -107,11 +115,20 @@ footer>div>div {
 
 /* Hero Image */
 
+#hero-image-viewport {
+    width: 100vw;
+    overflow: hidden;
+    height: 300px;
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
 #hero-image {
     background: url('../images/backbar.webp') repeat center center;
     background-size: cover;
-    height: 300px;
+    height: 100%;
     width: 100%;
+    flex-shrink: 0;
 }
 
 /* Panel 1 and 2 */
@@ -345,7 +362,6 @@ footer>div>div {
 .contact-us-background {
     background: url('../images/contact-us-background-bar.webp') no-repeat center center;
     background-size: cover;
-    min-height: calc(100vh - 290px);
 }
 
 .contact-us-container {
